Changes in s3 property file

--- a/language-platform/module/common/src/test/resources/amazonS3Config.properties
+++ b/language-platform/module/common/src/test/resources/amazonS3Config.properties
@@ -1,7 +1,7 @@
 #S3 server configurations
 
 #Current environment
-s3.region = dev
+s3.env = dev
 
 #Environment specific buckets
 s3.bucket.dev = ekstep-public-dev
