--- a/orchestrator/module/request-router/pom.xml
+++ b/orchestrator/module/request-router/pom.xml
@@ -54,5 +54,11 @@
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+			<groupId>com.ilimi</groupId>
+			<artifactId>ekstep-manager</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
 	</dependencies>
 </project>
