Bulk-Item-Uploader-Script|GHI- #529|Update Bulk-Item-uploader script to support mapping of micro-concepts and misConceptionsboth at item level and each response level for mmcq, ftb and mtf types

--- a/platform-ui/scripts/itemImport/ftb_mapping_v2.json
+++ b/platform-ui/scripts/itemImport/ftb_mapping_v2.json
@@ -49,6 +49,7 @@
 		"model": {
 			"param1": {"col-def": {"column" : 15, "type": "string"}},
 			"param2": {"col-def": {"column" : 16, "type": "string"}}
-		}
+		},
+		"start":17
 	}
 }
