Folder structure changes for files in S3

--- a/platform-config/manager/src/test/resources/amazonS3Config.properties
+++ b/platform-config/manager/src/test/resources/amazonS3Config.properties
@@ -7,3 +7,10 @@ s3.env = dev
 s3.bucket.dev = ekstep-config-dev
 s3.bucket.qa = ekstep-config-qa
 s3.bucket.prod = ekstep-config-prod
+
+s3.content.folder = content
+s3.asset.folder = assets
+s3.artifact.folder = artifact
+s3.bundle.folder = bundle
+s3.media.folder = media
+s3.ecar.folder = ecar_files
