--- a/searchIndex-platform/module/search-actors/src/test/resources/amazonS3Config.properties
+++ b/searchIndex-platform/module/search-actors/src/test/resources/amazonS3Config.properties
@@ -7,3 +7,10 @@ s3.env = dev
 s3.bucket.dev = ekstep-public-dev
 s3.bucket.qa = ekstep-public-qa
 s3.bucket.prod = ekstep-public-prod
+
+s3.content.folder = content
+s3.asset.folder = assets
+s3.artifact.folder = artifact
+s3.bundle.folder = bundle
+s3.media.folder = media
+s3.ecar.folder = ecar_files
